@@ -1,3 +1,5 @@
+ * Refrain from detecting (intermediate) responses, when the connection has
+   already been aborted or non-flush meta buckets are encountered.
  * Changed terminology to master/secondary connections in the source.
  * Test against the installed version of the module. This allows test cases
    to work with other versions.
